# openfish

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIRST_IMPLEMENTATION_PROMPT.md  LICENSE  README.md  README_CN.md  SECURITY.md  docker-compose.yml  env.example  projects.example.yaml  schema.sql
mvp_scaffold/: Makefile  README.md  pyproject.toml  requirements.txt
mvp_scaffold/migrations/: 0004_chat_flows_and_recent_projects.sql  0007_chat_codex_model.sql  0009_autopilot_runs.sql  0010_autopilot_stream_chunks.sql
mvp_scaffold/scripts/: check_event_consistency.py  ci_local.sh  install_start.sh
mvp_scaffold/src/: __init__.py  app.py  approval.py  approval_store.py  audit.py  audit_events.py  auth.py  autopilot_service.py  autopilot_store.py  chat_state_store.py  cli.py  codex_runner.py  codex_session_service.py  config.py  db.py  event_consistency.py  formatters.py  github_repo_service.py  main.py  mcp_service.py  model_catalog.py  models.py  process_lock.py  progress_reporter.py  project_registry.py  project_state_store.py  redaction.py  repo_inspector.py  router.py  schedule_store.py  scheduler.py  security_guard.py  skills_service.py  system_notification_store.py  task_runtime_store.py  task_store.py  task_templates.py  telegram_adapter.py  telegram_messages.py  telegram_sink.py  (+2 more)
mvp_scaffold/src/handlers/: __init__.py  _types.py  autopilot_handler.py  project_handler.py  schedule_handler.py  (+3 more)
mvp_scaffold/tests/: test_approval.py  test_approval_store.py  test_audit.py  test_autopilot_service.py  test_autopilot_store.py  test_cards_snapshot.py  test_chat_state_store.py  test_cli.py  test_codex_runner.py  test_config.py  test_db.py  test_event_consistency.py  test_formatters.py  test_github_repo_service.py  test_mcp_service.py  test_model_catalog.py  test_process_lock.py  test_progress_reporter.py  test_project_registry.py  test_project_state_store.py  test_redaction.py  test_router.py  test_schedule_store.py  test_scheduler.py  test_security_guard.py  test_skills_service.py  test_system_notification_store.py  test_task_events.py  test_task_runtime_store.py  test_task_store_context.py  test_task_store_schedule.py  test_telegram_adapter.py  test_telegram_messages.py  test_telegram_sink.py  test_telegram_views.py  test_update_service.py
(+36 files in other folders)
