[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfish"
version = "1.0.0"
description = "OpenFish: single-user Telegram-driven personal Codex assistant"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
  "python-telegram-bot>=22.0",
]

[project.scripts]
openfish = "src.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = [
  "resources/schema.sql",
  "resources/env.example",
  "resources/migrations/*.sql",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
