[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfish"
version = "1.3.0"
description = "OpenFish: single-user Telegram-driven personal Codex assistant"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Re13orn" },
]
keywords = ["telegram", "codex", "assistant", "cli", "self-hosted"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyYAML>=6.0",
  "python-telegram-bot>=22.0",
]

[project.urls]
Homepage = "https://github.com/Re13orn/openfish"
Repository = "https://github.com/Re13orn/openfish"
Issues = "https://github.com/Re13orn/openfish/issues"
Changelog = "https://github.com/Re13orn/openfish/blob/main/CHANGELOG.md"

[project.scripts]
openfish = "src.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["src", "src.resources", "src.resources.migrations"]
include-package-data = true

[tool.setuptools.package-data]
src = [
  "resources/schema.sql",
  "resources/env.example",
  "resources/migrations/*.sql",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
